# rstsql

./: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml  dummy.rs
src/: main.rs
src/adapters/: adapter_trait.rs  mod.rs  postgresql_adapter.rs
src/args/: types.rs
src/endpoints/: handler.rs  mod.rs  parser.rs
src/endpoints/sql_utils/: json_to_params.rs  mod.rs  preprocess.rs  row_to_json.rs
src/endpoints/swagger/: mod.rs  params.rs  response.rs  utils.rs
test_dsl/test/GET/: empty.sql
test_dsl/test/GET/some/: empty.sql
test_dsl/test/POST/some/: empty.sql
test_dsl/test2/GET/: empty.sql
