[package]
name = "rstsql"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
base64 = "0.22.1"
clap = { version = "4.5.45", features = ["derive", "env"] }
itertools = "0.14.0"
log = "0.4.27"
log4rs = "1.3.0"
serde_json = "1.0.142"
sqlx = { version = "0.8.6", features = ["postgres", "mysql", "runtime-tokio", "chrono", "uuid"] }
tokio = "1.47.1"
